gcc/testsuite/rust/rustc/ui/closures/issue-67123.rs
fn foo<T>(t: T) {
    || { t; t; }; // { dg-error ".E0382." "" { target *-*-* } }
}

fn main() {}

